fixed overlapping divs

--- a/website/app/static/css/scrollytelling.css
+++ b/website/app/static/css/scrollytelling.css
@@ -23,6 +23,6 @@
   background-color: #f7f5f2;
 }
 .hidden {
-  /*visibility: hidden;*/
+  visibility: hidden;
   opacity: 0;
 }
